# Software-Rasterizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  chaseah2.txt  jliu179.txt  psadat2.txt
include/: camera.hpp  model.hpp  renderer.hpp
include/geometry/: model.hpp  vertex.hpp
include/image/: camera.hpp  framebuffer.hpp
include/utility/: controller.hpp
src/: CMakeLists.txt  camera.cpp  main.cpp  model.cpp  renderer.cpp
src/geometry/: model.cpp  vertex.cpp
src/image/: camera.cpp  framebuffer.cpp
src/utility/: controller.cpp
test/: CMakeLists.txt  catch.hpp  tests.cpp
